# gtkwidgetspp

./: .gitignore  .gitmodules  meson.build
data/introspect/: org.kde.StatusNotifierItem.xml  org.kde.StatusNotifierWatcher.xml
include/Services/: HyprService.hpp  TrayService.hpp
include/Utils/: CSSUtil.hpp  PathUtil.hpp  ProcessUtil.hpp  StringUtil.hpp
include/Widgets/: Box.hpp  Button.hpp  CenterBox.hpp  Icon.hpp  Label.hpp  Widget.hpp  Window.hpp
src/Services/Hyprservice/: actives.cpp  client.cpp  event.cpp  monitor.cpp  service.cpp  socket.cpp  workspace.cpp
src/Services/Trayservice/: service.cpp  statusNotifierWatcher.cpp  trayItem.cpp  watcher.cpp
src/Services/Trayservice/dbus/: statusNotifierWatcher.cpp  trayItem.cpp
src/Utils/: CSSUtil.cpp  PathUtil.cpp  ProcessUtil.cpp  StringUtil.cpp
src/Widgets/: Box.cpp  Button.cpp  CenterBox.cpp  Icon.cpp  Label.cpp  Widget.cpp  Window.cpp
